--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,7 @@ dependencies:
   dotted_border: ^2.1.0
   table_calendar: ^3.1.2
   file_picker: ^8.1.7
-  video_player: ^2.8.0
-  story_view: ^0.16.6
-  youtube_player_flutter: ^9.1.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
