--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/images/Dentist_list_icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
