--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   file_picker: ^8.1.7
   get_storage: ^2.1.1
   font_awesome_flutter: ^10.6.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
