--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   get_storage: ^2.1.1
   font_awesome_flutter: ^10.6.0
   jwt_decoder: ^2.0.1
+  multiselect_field: ^1.6.8
 
 dev_dependencies:
   flutter_test:
