--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   jwt_decoder: ^2.0.1
   multiselect_field: ^1.6.8
+  flutter_widget_from_html: ^0.17.1
 
 dev_dependencies:
   flutter_test:
