--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   jwt_decoder: ^2.0.1
   multiselect_field: ^1.6.8
   flutter_widget_from_html: ^0.17.1
+  path_provider: ^2.1.3
+  url_launcher: ^6.2.5
+  device_info_plus: ^9.1.0
 
 dev_dependencies:
   flutter_test:
